frontend completed to auth_service